--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.363.0",
+    "moment-timezone": "^0.5.45",
     "next": "14.1.4",
     "prisma": "^5.11.0",
     "prisma-extension-pagination": "^0.6.0",
